# dealroom-ai

./: .gitignore  README.md  main.py  pyproject.toml  test_agent.py  test_generate.py  test_ingest.py
backend/: pyproject.toml
backend/app/engine/01_ingestion/: indexer.py  parser.py
backend/app/engine/02_generation/: events.py  workflow.py
backend/app/engine/03_evaluation/: evaluator.py
backend/app/engine/tools/: tools.py
