[project]
name = "dealroom-ai"
version = "0.1.0"
description = "Autonomous Investment Due Diligence Engine with Agentic RAG"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "llama-index-embeddings-google-genai>=0.5.1",
    "llama-index-llms-google-genai>=0.9.5",
]

[tool.uv]
workspace = { members = ["backend", "frontend"] }
