[project]
name = "dealroom-backend"
version = "0.1.0"
description = "FastAPI application and LlamaIndex Engine Core"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic-settings>=2.2.0",
    "llama-index>=0.10.0",
    "llama-index-llms-gemini>=0.1.0",
    "llama-index-embeddings-gemini>=0.1.0",
    "langfuse>=2.0.0",
    "pandas>=2.2.0",
    "pytest>=8.0.0"
]

[tool.uv]
package = false